--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "^4.0.2"
   },
   "devDependencies": {
+    "browser-sync": "^2.26.7",
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.12.0"
   }
