--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "gulp": "^4.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
     "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
-    "node-sass": "^4.12.0"
+    "gulp-sourcemaps": "^2.6.5",
+    "node-sass": "^4.12.0",
+    "sassdoc": "^2.7.1"
   }
 }
